<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment3">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/addContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Contact"
            android:layout_marginTop="100dp"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:textSize="28sp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addContact"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-4dp"
            android:hint="@string/example_name"
            app:layout_constraintStart_toEndOf="@+id/name_text"
            app:layout_constraintTop_toTopOf="@+id/name_text" />

        <TextView
            android:id="@+id/number_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:textSize="28sp"
            android:text="@string/number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text"/>

        <EditText
            android:id="@+id/number"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-4dp"
            android:hint="@string/example_number"
            app:layout_constraintStart_toEndOf="@+id/number_text"
            app:layout_constraintTop_toTopOf="@+id/number_text" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:textSize="28sp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_text"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-4dp"
            android:hint="@string/example_email"
            app:layout_constraintStart_toEndOf="@+id/email_text"
            app:layout_constraintTop_toTopOf="@+id/email_text" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>